traefik_kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: stilton.minikube.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
